kubernetes/platform/elastic-stack/app/components/route/kibana-route.yaml
---
# HTTPRoute for Kibana
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kibana
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
  hostnames:
    - kibana.${CLUSTER_DOMAIN}
  rules:
    - backendRefs:
        - name: efk-kb-http
          port: 5601
